# secure_link_app

./: .gitignore  .gitmodules  .pnp.cjs  README.md  index.html  installer.wxs  package.json  service_log.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  main.wxs  tauri.conf.json  tauri.windows.conf.json  uninstall_service.wxs
src-tauri/.cargo/: config.toml
src-tauri/installer/: Bundle.wxs  bundle.wxs
src-tauri/src/: auth_token_windows_registry_storage.rs  lib.rs  main.rs  secure_link_client.rs  secure_link_embedded_client.rs  secure_link_windows_service.rs  secure_link_windows_service_client.rs
src-tauri/tools/: bundle.ps1
