[package]
name = "secure_link_app"
version = "0.2.2"
description = "A Tauri App"
authors = ["Ridtt"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secure_link_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
secure-link-windows-service-client = ["secure_link_windows_service_manager"]
secure-link-embedded-client = [ "secure_link_client"]
windows-registry = [ "winreg"]

windows = [
    "secure-link-windows-service-client",
    "windows-registry"
]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secure_link_client = { git = "https://github.com/4ait/secure_link_client", features = ["load_dev_certs"], tag = "v0.1.8",  optional = true }
secure_link_windows_service_manager = { git = "https://github.com/4ait/secure_link_windows_service_manager", optional = true }
winreg = { version = "0.55.0", optional = true }
async-trait = "0.1.88"
thiserror = "2.0.12"
log = "0.4.27"
tauri-plugin-process = "2"
tauri-plugin-log = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"





